--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
             content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1"
             name="viewport"
         />
-        <title>Project-Mohager</title>
-        <meta name="title" content="Project-Mohager" />
+        <title>Kia Mohager</title>
+        <meta name="title" content="Kia Mohager" />
         <meta
             name="description"
             content="Example Description"
@@ -16,7 +16,7 @@
 
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://website.com" />
-        <meta property="og:title" content="Project-Mohager" />
+        <meta property="og:title" content="Kia Mohager" />
         <meta
             property="og:description"
             content="Example Description"
@@ -28,7 +28,7 @@
 
         <meta property="twitter:card" content="summary_large_image" />
         <meta property="twitter:url" content="https://website.com" />
-        <meta property="twitter:title" content="Project-Mohager" />
+        <meta property="twitter:title" content="Kia Mohager" />
         <meta
             property="twitter:description"
             content="Example Description"
