--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
             content="Example Description"
         />
         <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+
 
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://website.com" />
@@ -37,6 +41,7 @@
             property="twitter:image"
             content="https://website.com/image.jpg"
         />
+
     </head>
     <body>
         <div id="root"></div>
