--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Special+Gothic+Expanded+One&display=swap" rel="stylesheet">
 
 
         <meta property="og:type" content="website" />
