Callback should prepend with ? now rather than &

--- a/public/404.html
+++ b/public/404.html
@@ -22,7 +22,7 @@
                         .slice(pathSegmentsToKeep)
                         .join("/")
                         .replace(/&/g, "~and~") +
-                    (l.search ? "&" + l.search.slice(1).replace(/&/g, "~and~") : "") +
+                    (l.search ? "?" + l.search.slice(1).replace(/&/g, "~and~") : "") +
                     l.hash
             );
         </script>
