--- a/public/404.html
+++ b/public/404.html
@@ -6,6 +6,11 @@
         <script type="text/javascript">
             const pathSegmentsToKeep = 0;
             const l = window.location;
+
+            let correctedPath = l.pathname.slice(1).split("/").slice(pathSegmentsToKeep).join("/");
+            correctedPath = correctedPath.replace(/&code=/, "?code=");
+            correctedPath = correctedPath.replace(/&/g, "~and~");
+
             l.replace(
                 l.protocol +
                     "//" +
@@ -16,12 +21,7 @@
                         .slice(0, 1 + pathSegmentsToKeep)
                         .join("/") +
                     "/?/" +
-                    l.pathname
-                        .slice(1)
-                        .split("/")
-                        .slice(pathSegmentsToKeep)
-                        .join("/")
-                        .replace(/&/g, "~and~") +
+                    correctedPath +
                     (l.search ? "?" + l.search.slice(1).replace(/&/g, "~and~") : "") +
                     l.hash
             );
